--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: G.
 last_name: Mariona
 email: amariona@mit.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  This is a description.
+  PhD student in EECS at MIT
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and the <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
