--- a/_config.yml
+++ b/_config.yml
@@ -136,7 +136,7 @@ plugins:
   - jekyll-github-metadata
   - jekyll-feed
   - jekyll-paginate-v2
-  - jekyll-scholar
+  - jekyll/scholar
   - jekyll-twitter-plugin
   - jekyll-sitemap
   - jemoji
